Implemented send mail api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.mail.username=username
 spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Eureka
+spring.application.name=mailing-service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
