Implemented Resilence4J Retry and FallBack Mechanism

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #Eureka
 spring.application.name=mailing-service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#resilence4j
+resilience4j.retry.instances.send-mail.max-attempts=5
+resilience4j.retry.instances.send-mail.wait-duration=1s
+resilience4j.retry.instances.send-mail.enable-exponential-backoff=true
