Implemented Resilence4J Circuit Breaker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8192
 #Mail Properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=username
+spring.mail.username=usename
 spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
@@ -12,7 +12,12 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.application.name=mailing-service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-#resilence4j
+#resilence4j retry
 resilience4j.retry.instances.send-mail.max-attempts=5
-resilience4j.retry.instances.send-mail.wait-duration=1s
+resilience4j.retry.instances.send-mail.wait-duration=5s
 resilience4j.retry.instances.send-mail.enable-exponential-backoff=true
+
+#resilence4j circuitbreaker
+resilience4j.circuitbreaker.instances.send-mail.failure-rate-threshold=90
+resilience4j.circuitbreaker.instances.send-mail.wait-duration-in-open-state=30000
+resilience4j.circuitbreaker.instances.send-mail.permitted-number-of-calls-in-half-open-state=5
