--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8192
 #Mail Properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=usename
-spring.mail.password=password
+spring.mail.username=cricfizz.shushanth@gmail.com
+spring.mail.password=xhmopgfcsmiybpzu
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -21,3 +21,7 @@ resilience4j.retry.instances.send-mail.enable-exponential-backoff=true
 resilience4j.circuitbreaker.instances.send-mail.failure-rate-threshold=90
 resilience4j.circuitbreaker.instances.send-mail.wait-duration-in-open-state=30000
 resilience4j.circuitbreaker.instances.send-mail.permitted-number-of-calls-in-half-open-state=5
+
+#resilence4j rate limiter
+resilience4j.ratelimiter.instances.send-mail.limit-for-period=5
+resilience4j.ratelimiter.instances.send-mail.limit-refresh-period=10s
