Implemented Resilence4J Bulk Head to limit concurrent calls

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8192
 #Mail Properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=cricfizz.shushanth@gmail.com
-spring.mail.password=xhmopgfcsmiybpzu
+spring.mail.username=username
+spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -25,3 +25,6 @@ resilience4j.circuitbreaker.instances.send-mail.permitted-number-of-calls-in-hal
 #resilence4j rate limiter
 resilience4j.ratelimiter.instances.send-mail.limit-for-period=5
 resilience4j.ratelimiter.instances.send-mail.limit-refresh-period=10s
+
+#resilence4j rate bulk head
+resilience4j.bulkhead.instances.send-mail.max-concurrent-calls=5
