Implemented body to be a html text

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-server.port=8192
+server.port=8131
 
 #Mail Properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=username
-spring.mail.password=password
+spring.mail.username=cricfizz.shushanth@gmail.com
+spring.mail.password=xhmopgfcsmiybpzu
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -28,3 +28,7 @@ resilience4j.ratelimiter.instances.send-mail.limit-refresh-period=10s
 
 #resilence4j rate bulk head
 resilience4j.bulkhead.instances.send-mail.max-concurrent-calls=5
+
+#Logging
+logging.level.com.mailingApplication=INFO
+logging.level.*=INFO 
